--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -1,14 +1,21 @@
-name: model-wine-quality
+name: GitHub Actions Demo
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
-  run:
-    runs-on:[ubuntu-latest]
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
     steps:
-      - users: actions/checkout@v3
-      - name: cml_run
-        env: 
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
         run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
         
           # Your ML workflow goes here
           pip install -r requirements.txt
